--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@geist-ui/core": "^2.3.8",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.1",
-    "evergreen-ui": "^6.9.9",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.43",
